# v8-learn

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  abstractAsyncTask.cpp  abstractAsyncTask.h  environment.cpp  environment.h  linuxThreadDelegate.cpp  linuxThreadDelegate.h  main.cpp  winThreadDelegate.cpp  winThreadDelegate.h
include/v8/: v8.h
test/: context_test.cpp  extension_test.cpp  handle_scope_test.cpp  handle_test.cpp  isolate_test.cpp  module_test.cpp  node_build_in_module.cpp  promise_test.cpp
test/base/: abstractAsyncTask.cpp  abstractAsyncTask.h  environment.cpp  environment.h
test/base/platform/: linuxThreadDelegate.cpp  linuxThreadDelegate.h  winThreadDelegate.cpp  winThreadDelegate.h
test/source/: test_read_file.json
v8/: VERSION
v8/lib/win/: v8_libbase.lib  v8_libplatform.lib  v8_monolith.lib
